# python-lambda

cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
functions/test-function/: Dockerfile  index.py  pyproject.toml
