[tool.poetry]
name = "test_function"
version = "0.1.0"
description = ""
authors = ["Adrian Hesketh <adrianhesketh@hushmail.com>"]
readme = "README.md"
packages = [{include = "test_function"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.26.13"
botocore = "1.29.13"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
idna = "3.4"
jmespath = "1.0.1"
moto = "4.0.11"
numpy = "1.23.5"
pandas = "1.5.1"
python-dateutil = "2.8.2"
pytz = "2022.6"
requests = "2.28.1"
s3transfer = "0.6.0"
six = "1.16.0"
urllib3 = "1.26.12"


[tool.poetry.group.dev.dependencies]
deptry = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
